# ros2_workshop_manipal

./: .gitignore  Cloning_the_project.md  README.md  ROS2_Installation_Guide.md
ros2_cpp/: CMakeLists.txt  package.xml
ros2_cpp/src/: RGBD_seg.cpp  RGBD_segV02.cpp  forward_kinematics.cpp  inverse_kinematics.cpp  moveit_planner.cpp  service_client.cpp  service_server.cpp
ros2_description/: CMakeLists.txt  package.xml
ros2_description/config/: medi_assist_config.yaml
ros2_description/launch/: controller.launch.py  gazebo.launch.py  rviz.launch.py
ros2_description/meshes/: Depth_Camera_1.stl  Femto_bolt_v1_1.stl  RGB_Camera_1.stl  base_link.stl  gripper_1.stl  link_1__1__1.stl  link_2__1__1.stl  link_3__1__1.stl  link_4__1__1.stl  link_5__1__1.stl  link_6__1__1.stl
ros2_description/meshes/dae/: base_linkV02.dae  link_5.dae
ros2_description/models/medical_scalp/: model.config  model.sdf
ros2_description/models/medical_scalp/meshes/: scaple_fusion360.stl
ros2_description/models/medical_scissors/: model.config  model.sdf
ros2_description/models/medical_scissors/meshes/: scissors_fusion360.stl
ros2_description/urdf/: medi_assist.urdf.xacro  medi_assist_gazebo.xacro  medi_assist_ros2_control.xacro  orbec_camera.xacro
ros2_description/worlds/: medi_assist.world  medi_assistV02.world
ros2_moveit_files/: .setup_assistant  CMakeLists.txt  package.xml
ros2_moveit_files/config/: Model.srdf  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml
ros2_moveit_files/launch/: demo.launch.py  move_group.launch.py  moveit.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ros2_msgs/: CMakeLists.txt  package.xml
ros2_msgs/srv/: GetCentroid.srv
